# TupoyeMenu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  README.md  TODO.md  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml
BigBaseV2/src/: common.hpp  crossmap.hpp  function_types.hpp  gta_util.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  invoker.hpp  main.cpp  natives.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  script_mgr.cpp  script_mgr.hpp
asi_loader/: pe_image.h  pools.cpp  script_manager.cpp  script_manager.h
backend/: backend.cpp
cmake/: build_options.cmake  build_options_impl.cmake  git.cmake  gtav-classes.cmake  imgui.cmake
docs/lua/: infraction.md  tabs.md
screenshots/: logo.xcf  logo_512x512.xcf
scripts/: build_options.cmake  build_options_impl.cmake  cpr.cmake  en_US.json  g3log.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  lua_natives_gen.py  minhook.cmake  natives_gen.py  pugixml.cmake  remove_translations.py
src/: benchmark.h  byte_patch_manager.cpp  byte_patch_manager.hpp  common.hpp  crossmap.cpp  detour_hook.cc  detour_hook.cpp  detour_hook.hpp  fiber_pool.cpp  fiber_pool.hpp  file_manager.cpp  file_manager.hpp  function_types.hpp  gta_pointers.hpp  gta_pointers_layout_info.hpp  gta_util.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  invoker.cpp  invoker.hpp  invoker_asm.asm  logger.hpp  main.cpp  natives.cpp  natives.hpp  packet.cpp  packet.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  sc_pointers.hpp  sc_pointers_layout_info.hpp  script.cpp  script.hpp  script_function.cpp  script_function.hpp  script_global.cpp  (+15 more)
src/asi_loader/: asi_scripts.cpp  asi_scripts.h  asi_scripts.hpp  pe_image.cpp  pe_image.h  pe_image.hpp  pools.cpp  pools.h  script_manager.cpp  script_manager.h  script_manager.hpp
src/backend/: backend.cpp  backend.hpp  bool_command.cpp  command.cpp  command.hpp  player_command.cpp  script_patches.hpp
src/core/: enums.hpp  globals.hpp  scr_globals.hpp  settings.hpp
src/file_manager/: file.cpp  file.hpp  folder.cpp  folder.hpp
src/fonts/: fonts.hpp  icons.cpp  storopia.cpp
src/gta/: array.hpp  (+30 more)
(+863 files in other folders)
